--- a/index.html
+++ b/index.html
@@ -57,11 +57,18 @@
         }
         button:hover { background: #1d4ed8; }
         button:disabled { background: #94a3b8; cursor: wait; }
-        .btn-secondary {
-            background: #6366f1;
-            margin-top: 8px;
+        .btn-small {
+            padding: 10px 16px;
+            font-size: 14px;
         }
-        .btn-secondary:hover { background: #4f46e5; }
+        .btn-green { background: #059669; }
+        .btn-green:hover { background: #047857; }
+        .btn-purple { background: #6366f1; }
+        .btn-purple:hover { background: #4f46e5; }
+        .btn-red { background: #dc2626; }
+        .btn-red:hover { background: #b91c1c; }
+        .btn-row { display: flex; gap: 8px; margin-top: 12px; }
+        .btn-row button { flex: 1; }
         .inference {
             background: #fef3c7;
             border: 1px solid #fcd34d;
@@ -95,9 +102,17 @@
         }
         .actions { display: flex; gap: 12px; margin-top: 16px; }
         .actions button { flex: 1; }
-        .copy-btn { background: #059669; }
-        .copy-btn:hover { background: #047857; }
         .edit-hint { font-size: 13px; color: #666; margin-bottom: 8px; }
+        .fetch-status {
+            font-size: 13px;
+            margin-top: 10px;
+            padding: 10px 14px;
+            border-radius: 6px;
+            display: none;
+        }
+        .fetch-status.loading { display: block; background: #dbeafe; color: #1e40af; }
+        .fetch-status.success { display: block; background: #dcfce7; color: #166534; }
+        .fetch-status.error { display: block; background: #fee2e2; color: #991b1b; }
         .guidelines {
             background: #f0fdf4;
             border: 1px solid #bbf7d0;
@@ -108,16 +123,15 @@
         }
         .guidelines strong { color: #166534; }
         .guidelines ul { margin: 8px 0 0 0; padding-left: 20px; color: #15803d; }
-        .fetch-status {
-            font-size: 13px;
-            margin-top: 8px;
-            padding: 8px 12px;
+        .fetch-tip {
+            background: #dbeafe;
             border-radius: 6px;
-            display: none;
+            padding: 12px;
+            font-size: 13px;
+            color: #1e40af;
+            margin-top: 12px;
         }
-        .fetch-status.loading { display: block; background: #dbeafe; color: #1e40af; }
-        .fetch-status.success { display: block; background: #dcfce7; color: #166534; }
-        .fetch-status.error { display: block; background: #fee2e2; color: #991b1b; }
+        .fetch-tip strong { display: block; margin-bottom: 4px; }
     </style>
 </head>
 <body>
@@ -138,7 +152,7 @@
 
     <div class="card">
         <h2>1. Company & Role</h2>
-        <div class="row-3">
+        <div class="row">
             <div>
                 <label for="company">Company Name *</label>
                 <input type="text" id="company" placeholder="e.g., Spotify">
@@ -147,12 +161,10 @@
                 <label for="role">Role Title *</label>
                 <input type="text" id="role" placeholder="e.g., Growth PM">
             </div>
-            <div>
-                <label for="companyUrl">Company Website <span class="label-hint">(optional)</span></label>
-                <input type="url" id="companyUrl" placeholder="https://company.com/about">
-            </div>
         </div>
-        <button class="btn-secondary" onclick="fetchCompanyInfo()" id="fetchBtn">🔍 Fetch Company Info</button>
+        <div class="btn-row">
+            <button class="btn-small btn-green" onclick="fetchFromWikipedia()" id="wikiBtn">🔍 Fetch Company Info (Wikipedia)</button>
+        </div>
         <div id="fetchStatus" class="fetch-status"></div>
     </div>
 
@@ -163,9 +175,9 @@
     </div>
 
     <div class="card">
-        <h2>3. Company Context <span class="label-hint">(auto-filled if URL provided, or paste manually)</span></h2>
+        <h2>3. Company Context <span class="label-hint">(paste from their website)</span></h2>
         <label for="companyContext">What does the company do? Mission, product, stage, culture...</label>
-        <textarea id="companyContext" rows="4" placeholder="e.g., Series B fintech building spending analytics for SMBs. Mission is to help small businesses understand their cash flow. Engineering-led culture, remote-first..."></textarea>
+        <textarea id="companyContext" rows="4" placeholder="Paste from their About page, e.g.: 'We're a Series B fintech building spending analytics for SMBs. Our mission is to help small businesses understand their cash flow...'"></textarea>
     </div>
 
     <div class="card">
@@ -194,110 +206,104 @@
             <p class="edit-hint">💡 Click to edit. This is a strong draft—personalize details you know better.</p>
             <div id="coverLetter" contenteditable="true"></div>
             <div class="actions">
-                <button class="copy-btn" onclick="copyToClipboard()">📋 Copy to Clipboard</button>
-                <button onclick="downloadPDF()" style="background: #dc2626;">📄 Download PDF</button>
-                <button onclick="generateLetter()" style="background: #6366f1;">🔄 Regenerate</button>
+                <button class="btn-green" onclick="copyToClipboard()">📋 Copy</button>
+                <button class="btn-red" onclick="downloadPDF()">📄 Download PDF</button>
+                <button class="btn-purple" onclick="generateLetter()">🔄 Regenerate</button>
             </div>
         </div>
     </div>
 
     <script>
         // =====================================================================
-        // COMPANY WEBSITE FETCHING (via public CORS proxy)
+        // FETCH COMPANY INFO FROM WIKIPEDIA
         // =====================================================================
 
-        async function fetchCompanyInfo() {
-            const url = document.getElementById('companyUrl').value.trim();
+        async function fetchFromWikipedia() {
+            const company = document.getElementById('company').value.trim();
             const status = document.getElementById('fetchStatus');
-            const btn = document.getElementById('fetchBtn');
+            const btn = document.getElementById('wikiBtn');
 
-            if (!url) {
+            if (!company) {
                 status.className = 'fetch-status error';
-                status.textContent = 'Please enter a company URL first';
+                status.textContent = 'Please enter a company name first.';
                 return;
             }
 
             btn.disabled = true;
             status.className = 'fetch-status loading';
-            status.textContent = 'Fetching company info...';
+            status.textContent = `Searching Wikipedia for "${company}"...`;
 
             try {
-                // Try multiple CORS proxies
-                const proxies = [
-                    `https://api.allorigins.win/raw?url=${encodeURIComponent(url)}`,
-                    `https://corsproxy.io/?${encodeURIComponent(url)}`,
-                ];
+                // Step 1: Search Wikipedia for the company
+                const searchUrl = `https://en.wikipedia.org/w/api.php?action=opensearch&search=${encodeURIComponent(company)}&limit=5&namespace=0&format=json&origin=*`;
 
-                let html = null;
-                for (const proxyUrl of proxies) {
-                    try {
-                        const response = await fetch(proxyUrl, { timeout: 10000 });
-                        if (response.ok) {
-                            html = await response.text();
-                            break;
-                        }
-                    } catch (e) {
-                        continue;
-                    }
+                const searchResponse = await fetch(searchUrl);
+                const searchData = await searchResponse.json();
+
+                // searchData format: [query, [titles], [descriptions], [urls]]
+                const titles = searchData[1];
+
+                if (!titles || titles.length === 0) {
+                    throw new Error('No Wikipedia page found');
                 }
 
-                if (!html) {
-                    throw new Error('Could not fetch');
-                }
+                // Find the best match (prefer exact match or one with "company" in description)
+                let bestTitle = titles[0];
+                const descriptions = searchData[2];
 
-                // Extract useful text
-                const parser = new DOMParser();
-                const doc = parser.parseFromString(html, 'text/html');
-
-                // Remove scripts, styles, nav, footer
-                doc.querySelectorAll('script, style, nav, footer, header, noscript').forEach(el => el.remove());
-
-                // Try to find About/Mission content
-                let content = '';
-
-                // Look for meta description
-                const metaDesc = doc.querySelector('meta[name="description"]');
-                if (metaDesc) {
-                    content += metaDesc.getAttribute('content') + '\n\n';
-                }
-
-                // Look for specific sections
-                const selectors = [
-                    '[class*="about"]', '[class*="mission"]', '[class*="story"]',
-                    '[id*="about"]', '[id*="mission"]', 'main', 'article'
-                ];
-
-                for (const selector of selectors) {
-                    const el = doc.querySelector(selector);
-                    if (el && el.textContent.trim().length > 100) {
-                        content += el.textContent.trim().substring(0, 1500) + '\n';
+                for (let i = 0; i < titles.length; i++) {
+                    const desc = (descriptions[i] || '').toLowerCase();
+                    const title = titles[i].toLowerCase();
+                    if (title === company.toLowerCase() ||
+                        desc.includes('company') ||
+                        desc.includes('corporation') ||
+                        desc.includes('startup') ||
+                        desc.includes('software') ||
+                        desc.includes('technology')) {
+                        bestTitle = titles[i];
                         break;
                     }
                 }
 
-                // Fallback to body text
-                if (content.length < 100) {
-                    content = doc.body?.textContent?.trim().substring(0, 2000) || '';
+                status.textContent = `Found "${bestTitle}", fetching details...`;
+
+                // Step 2: Get the page summary
+                const summaryUrl = `https://en.wikipedia.org/api/rest_v1/page/summary/${encodeURIComponent(bestTitle)}`;
+
+                const summaryResponse = await fetch(summaryUrl);
+
+                if (!summaryResponse.ok) {
+                    throw new Error('Could not fetch page summary');
                 }
 
-                // Clean up
-                content = content
-                    .replace(/\s+/g, ' ')
-                    .replace(/\n\s*\n/g, '\n')
-                    .trim()
-                    .substring(0, 1500);
+                const summaryData = await summaryResponse.json();
 
-                if (content.length > 50) {
-                    document.getElementById('companyContext').value = content;
-                    status.className = 'fetch-status success';
-                    status.textContent = '✓ Company info fetched. Review and edit as needed.';
-                } else {
-                    throw new Error('Not enough content found');
+                // Extract useful information
+                let companyInfo = summaryData.extract || '';
+
+                // Add description if available
+                if (summaryData.description) {
+                    companyInfo = summaryData.description + '.\n\n' + companyInfo;
                 }
+
+                if (companyInfo.length < 50) {
+                    throw new Error('Not enough information found');
+                }
+
+                // Truncate if too long
+                if (companyInfo.length > 1500) {
+                    companyInfo = companyInfo.substring(0, 1500) + '...';
+                }
+
+                // Fill in the company context
+                document.getElementById('companyContext').value = companyInfo;
+
+                status.className = 'fetch-status success';
+                status.textContent = `✓ Found info for "${bestTitle}". Review and edit if needed.`;
 
             } catch (error) {
                 status.className = 'fetch-status error';
-                status.textContent = 'Could not fetch automatically. Please paste company info manually (from their About page, etc.)';
+                status.textContent = `Could not find "${company}" on Wikipedia. Try a different company name spelling, or paste info manually.`;
             }
 
             btn.disabled = false;
@@ -513,12 +519,16 @@ linkedin.com/in/janskaaden`;
             document.getElementById('output').scrollIntoView({ behavior: 'smooth' });
         }
 
+        // =====================================================================
+        // COPY & DOWNLOAD
+        // =====================================================================
+
         function copyToClipboard() {
             const text = document.getElementById('coverLetter').innerText;
             navigator.clipboard.writeText(text).then(() => {
-                const btn = document.querySelector('.copy-btn');
+                const btn = document.querySelector('.btn-green');
                 btn.textContent = '✓ Copied!';
-                setTimeout(() => btn.textContent = '📋 Copy to Clipboard', 2000);
+                setTimeout(() => btn.textContent = '📋 Copy', 2000);
             });
         }
 
@@ -535,16 +545,16 @@ linkedin.com/in/janskaaden`;
             // Create a styled container for PDF
             const pdfContent = document.createElement('div');
             pdfContent.style.fontFamily = 'Georgia, serif';
-            pdfContent.style.fontSize = '12pt';
-            pdfContent.style.lineHeight = '1.6';
-            pdfContent.style.padding = '40px';
-            pdfContent.style.maxWidth = '600px';
+            pdfContent.style.fontSize = '11pt';
+            pdfContent.style.lineHeight = '1.5';
+            pdfContent.style.padding = '20px';
+            pdfContent.style.maxWidth = '650px';
             pdfContent.style.color = '#1a1a1a';
             pdfContent.innerHTML = letterText.replace(/\n/g, '<br>');
 
             // PDF options
             const opt = {
-                margin: [15, 15, 15, 15],
+                margin: [15, 20, 15, 20],
                 filename: filename,
                 image: { type: 'jpeg', quality: 0.98 },
                 html2canvas: { scale: 2, useCORS: true },
